--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="myApp">  <!-- states that this is an angular application-->
+<html ng-app="myApp">   <!-- states that this is an angular application -->
 	<head> 
 		<title>Shopping List Application</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
-	</head>
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+ 	</head>
 	<body>
 		<nav>
 			<ul>
@@ -25,3 +27,7 @@
     		<script src="./home-controller.js"></script>
 	<body>
 </html>
+
+<!-- ====================================================================================================================================== -->
+
+
