--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html ng-app="myApp">   <!-- states that this is an angular application -->
 	<head> 
 		<title>Shopping List Application</title>
-		<link rel="stylesheet" type="text/css" href="main.css">
-		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+		<link rel="stylesheet" type="text/css" href="main.css">
  	</head>
-	<body>
+	<body> <!-- style= "background-image: url(/img/mall.jpeg); background-image: cover; background-image: repeat no repeat; width: 100%; height: 100%; overflow-wrap: hidden; overflow-y: hidden; overflow-x: hidden;> -->
 		<nav>
 			<ul>
-			<li><a href="#/home">Home</a></li>
-			<li><a href="#/shopping-list">Shopping List</a></li>
-
+				<li><a href="#/home">Home</a></li>
+				<li><a href="#/shopping-list">Shopping List</a></li>
 			</ul>
 		</nav>
 			<main ng-view>
